# ros-course

./: .clang-format  .gitignore  Makefile
1/ex01/: commands.txt
2/ex01/: .zsh_container  ex01.txt
2/ex02/: list_exec_action_tutorials.txt  package_path_ros2topic.txt
2/ex03/egormalyutin/: CMakeLists.txt  package.xml
2/ex04/: colcon_build.txt
2/ex05/: rosnode_info.txt  rosnode_list.txt
2/ex06/: cmd_vel.txt  draw.sh
2/ex07/: parameter_server.txt  spawn.sh
2/ex08/: rqt_console.csv  three_turtles.launch.py  three_turtles_mimic.launch.py
2/ex09/name_op_interfaces/: CMakeLists.txt  package.xml
2/ex10/text_to_cmd_vel/: package.xml  setup.py
3/ex01/service_full_name/: package.xml  setup.py
3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
3/ex03/: doctor.txt
3/ex04/move_to_goal/: package.xml  setup.py
3/ex05/action_cleaning_robot/: package.xml  setup.py
3/ex05/action_cleaning_robot_msgs/: CMakeLists.txt  package.xml
4/ex01/: last_transform.txt  transform.txt
4/ex02+03/: carrot.rviz
4/ex02+03/turtle_multi_target/: CMakeLists.txt  package.xml
4/ex02+03/turtle_multi_target/launch/: ex02.launch.py  ex02b.launch.py  ex03.launch.py
4/ex02+03/turtle_multi_target/src/: carrot.cpp  controller.cpp  spawn.cpp  teleop.cpp  throttler.hpp  turtle_tf.cpp
4/ex02+03/turtle_multi_target_interfaces/: CMakeLists.txt  package.xml
5/ex01..02/: config.rviz  model.urdf  model.urdf.xacro  robot_display.launch.py
5/ex03..05/minigun_resources/: CMakeLists.txt  package.xml
5/ex03..05/minigun_resources/launch/: publisher.launch.py
5/ex03..05/minigun_resources/models/: model.gazebo.xacro  model.urdf.xacro
5/ex03..05/minigun_resources/models/stl/: barrel.stl  base.bak.stl  base.stl  little_wheel.stl  wheel.stl
5/ex03..05/minigun_resources/worlds/: playground.sdf
6/minigun_controller2/: package.xml  setup.cfg  setup.py
utils/file_publisher/: package.xml  setup.cfg  setup.py
utils/watch_urdf/: package.xml  setup.cfg  setup.py
(+26 files in other folders)
